Enable manual workflow dispatch

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,8 @@ name: Update README.md
 on:
   push:
   schedule:
-    - cron: "* 1 * * *"
+    - cron: "0 1 * * *"
+  workflow_dispatch:
 
 jobs:
   markscribe:
